--- a/RESTURANT/index.html
+++ b/RESTURANT/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>AQIB RESTURANT</title>
    </head>
-<body style="background-color: rgb(27 27 27)">
+<body style="background-color: #1b1b1b">
     <center>
         <h1><a href="index.html"><img src="images/CHIEF.gif" alt="Resturant" width="250" height="250" /> </a>
             <a href="index.html" style="color:#c1996b;"><br />AQIB RESTAURANT</a>
