--- a/RESTURANT/index.html
+++ b/RESTURANT/index.html
@@ -110,6 +110,8 @@
             height="30" /> </a>
         <a href="https://www.instagram.com/aqi984/" target="_blank"><img src="images/instaicon.png" width="30"
                 height="30" /> </a>
+                <a href="https://www.instagram.com/aqi984/" target="_blank"><img src="images/instaicon.png" width="30"
+                    height="30" /> </a>
         <br /><a href=""><img src="images/gotopicon2.png" alt="Top" width="50" height="50" style="background-color: #c1996b;" /> </a>
     </center>
 </body>
