add new external css file

--- a/CHESS/index.html
+++ b/CHESS/index.html
@@ -5,152 +5,153 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHESS GAME</title>
+    <link rel="stylesheet" href="Chess.css">
 </head>
 
-<body style="background-color: olivedrab;">
+<body>
     <center>
         <table border="1" cellspacing="0" cellpadding="6" width="80%">
             <tr>
-                <td style="background-color: darkgoldenrod;">
+                <td class="darkgoldenrod">
                     <center><img src="images/rookblack.png" width="80" height="100" /></center>
                 </td>
-                <td style="background-color: khaki;">
+                <td class="khaki">
                     <center><img src="images/knightblackleft.png" width="80" height="100" /></center>
                 </td>
-                <td style="background-color: darkgoldenrod;">
+                <td class="darkgoldenrod">
                     <center><img src="images/bishopblack.png" width="80" height="100" /></center>
                 </td>
-                <td style="background-color: khaki;">
+                <td class="khaki">
                     <center><img src="images/queenblack.png" width="80" height="100" /></center>
                 </td>
-                <td style="background-color: darkgoldenrod;">
+                <td class="darkgoldenrod">
                     <center><img src="images/kingblackkk.png" width="80" height="100" /></center>
                 </td>
-                <td style="background-color: khaki;">
+                <td class="khaki">
                     <center><img src="images/bishopblack.png" width="80" height="100" /></center>
                 </td>
-                <td style="background-color: darkgoldenrod;">
+                <td class="darkgoldenrod">
                     <center><img src="images/knightblackleft.png" width="80" height="100" /></center>
                 </td>
-                <td style="background-color: khaki;">
+                <td class="khaki">
                     <center><img src="images/rookblack.png" width="80" height="100" /></center>
                 </td>
             </tr>
             <tr>
-                <td style="background-color: khaki;">
+                <td class="khaki">
                     <center><img src="images/pawnblack.png" width="70" height="100" /></center>
                 </td>
-                <td style="background-color: darkgoldenrod;">
+                <td class="darkgoldenrod">
                     <center><img src="images/pawnblack.png" width="70" height="100" /></center>
                 </td>
-                <td style="background-color: khaki;">
+                <td class="khaki">
                     <center><img src="images/pawnblack.png" width="70" height="100" /></center>
                 </td>
-                <td style="background-color: darkgoldenrod;">
+                <td class="darkgoldenrod">
                     <center><img src="images/pawnblack.png" width="70" height="100" /></center>
                 </td>
-                <td style="background-color: khaki;">
+                <td class="khaki">
                     <center><img src="images/pawnblack.png" width="70" height="100" />
                 </td>
-                <td style="background-color: darkgoldenrod;">
+                <td class="darkgoldenrod">
                     <center><img src="images/pawnblack.png" width="70" height="100" /></center>
                 </td>
-                <td style="background-color: khaki;">
+                <td class="khaki">
                     <center><img src="images/pawnblack.png" width="70" height="100" />
                 </td>
-                <td style="background-color: darkgoldenrod;">
+                <td class="darkgoldenrod">
                     <center><img src="images/pawnblack.png" width="70" height="100" /></center>
                 </td>
             </tr>
             <tr height="130">
-                <td style="background-color: darkgoldenrod;"></td>
-                <td style="background-color: khaki;"></td>
-                <td style="background-color: darkgoldenrod;"></td>
-                <td style="background-color: khaki;"></td>
-                <td style="background-color: darkgoldenrod;"></td>
-                <td style="background-color: khaki;"></td>
-                <td style="background-color: darkgoldenrod;"></td>
-                <td style="background-color: khaki;"></td>
+                <td class="darkgoldenrod"></td>
+                <td class="khaki"></td>
+                <td class="darkgoldenrod"></td>
+                <td class="khaki"></td>
+                <td class="darkgoldenrod"></td>
+                <td class="khaki"></td>
+                <td class="darkgoldenrod"></td>
+                <td class="khaki"></td>
             </tr>
             <tr height="130">
-                <td style="background-color: khaki;"></td>
-                <td style="background-color: darkgoldenrod;"></td>
-                <td style="background-color: khaki;"></td>
-                <td style="background-color: darkgoldenrod;"></td>
-                <td style="background-color: khaki;"></td>
-                <td style="background-color: darkgoldenrod;"></td>
-                <td style="background-color: khaki;"></td>
-                <td style="background-color: darkgoldenrod;"></td>
+                <td class="khaki"></td>
+                <td class="darkgoldenrod"></td>
+                <td class="khaki"></td>
+                <td class="darkgoldenrod"></td>
+                <td class="khaki"></td>
+                <td class="darkgoldenrod"></td>
+                <td class="khaki"></td>
+                <td class="darkgoldenrod"></td>
             </tr>
             <tr height="130">
-                <td style="background-color: darkgoldenrod;"></td>
-                <td style="background-color: khaki;"></td>
-                <td style="background-color: darkgoldenrod;"></td>
-                <td style="background-color: khaki;"></td>
-                <td style="background-color: darkgoldenrod;"></td>
-                <td style="background-color: khaki;"></td>
-                <td style="background-color: darkgoldenrod;"></td>
-                <td style="background-color: khaki;"></td>
+                <td class="darkgoldenrod"></td>
+                <td class="khaki"></td>
+                <td class="darkgoldenrod"></td>
+                <td class="khaki"></td>
+                <td class="darkgoldenrod"></td>
+                <td class="khaki"></td>
+                <td class="darkgoldenrod"></td>
+                <td class="khaki"></td>
             </tr>
             <tr height="130">
-                <td style="background-color: khaki;"></td>
-                <td style="background-color: darkgoldenrod;"></td>
-                <td style="background-color: khaki;"></td>
-                <td style="background-color: darkgoldenrod;"></td>
-                <td style="background-color: khaki;"></td>
-                <td style="background-color: darkgoldenrod;"></td>
-                <td style="background-color: khaki;"></td>
-                <td style="background-color: darkgoldenrod;"></td>
+                <td class="khaki"></td>
+                <td class="darkgoldenrod"></td>
+                <td class="khaki"></td>
+                <td class="darkgoldenrod"></td>
+                <td class="khaki"></td>
+                <td class="darkgoldenrod"></td>
+                <td class="khaki"></td>
+                <td class="darkgoldenrod"></td>
             </tr>
             <tr>
-                <td style="background-color: darkgoldenrod;">
+                <td class="darkgoldenrod">
                     <center><img src="images/pawnnwhiteee.png" width="70" height="100" /></center>
                 </td>
-                <td style="background-color: khaki;">
+                <td class="khaki">
                     <center><img src="images/pawnnwhiteee.png" width="70" height="100" /></center>
                 </td>
-                <td style="background-color: darkgoldenrod;">
+                <td class="darkgoldenrod">
                     <center><img src="images/pawnnwhiteee.png" width="70" height="100" /></center>
                 </td>
-                <td style="background-color: khaki;">
+                <td class="khaki">
                     <center><img src="images/pawnnwhiteee.png" width="70" height="100" /></center>
                 </td>
-                <td style="background-color: darkgoldenrod;">
+                <td class="darkgoldenrod">
                     <center><img src="images/pawnnwhiteee.png" width="70" height="100" /></center>
                 </td>
-                <td style="background-color: khaki;">
+                <td class="khaki">
                     <center><img src="images/pawnnwhiteee.png" width="70" height="100" /></center>
                 </td>
-                <td style="background-color: darkgoldenrod;">
+                <td class="darkgoldenrod">
                     <center><img src="images/pawnnwhiteee.png" width="70" height="100" /></center>
                 </td>
-                <td style="background-color: khaki;">
+                <td class="khaki">
                     <center><img src="images/pawnnwhiteee.png" width="70" height="100" /></center>
                 </td>
             </tr>
             <tr>
-                <td style="background-color: khaki;">
+                <td class="khaki">
                     <center><img src="images/rookwhite.png" width="80" height="100" /></center>
                 </td>
-                <td style="background-color: darkgoldenrod;">
+                <td class="darkgoldenrod">
                     <center><img src="images/knightwhite.png" width="80" height="100" /></center>
                 </td>
-                <td style="background-color: khaki;">
+                <td class="khaki">
                     <center><img src="images/bishopwhite.png" width="80" height="100" /></center>
                 </td>
-                <td style="background-color: darkgoldenrod;">
+                <td class="darkgoldenrod">
                     <center><img src="images/queenwhite.png" width="80" height="100" /></center>
                 </td>
-                <td style="background-color: khaki;">
+                <td class="khaki">
                     <center><img src="images/kingwhitee.png" width="80" height="100" /></center>
                 </td>
-                <td style="background-color: darkgoldenrod;">
+                <td class="darkgoldenrod">
                     <center><img src="images/bishopwhite.png" width="80" height="100" /></center>
                 </td>
-                <td style="background-color: khaki;">
+                <td class="khaki">
                     <center><img src="images/knightwhite.png" width="80" height="100" /></center>
                 </td>
-                <td style="background-color: darkgoldenrod;">
+                <td class="darkgoldenrod">
                     <center><img src="images/rookwhite.png" width="80" height="100" /></center>
                 </td>
             </tr>
