--- a/RESTURANT/Baverages/Baverages.html
+++ b/RESTURANT/Baverages/Baverages.html
@@ -4,54 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BAVERAGES</title>
+    <link rel="stylesheet" href="../restaurant.css">
 </head>
-<body style="background-color: #1c1c1c;">
+<body>
     <a href="Baverages.html"><img src="../images/baveragehead2.webp" width="1330" height="200" /> </a>
     <a href="Baverages.html"><img src="../images/baveragehead1.webp" width="1330" height="200" /> </a>
-    <hr style="border-block-color: #c1996b;" />
-    <a href="../index.html"><img src="../images/homeicon.png" width="50" height="55" style="background-color: #c1996b;" /> </a>
-    <h1 style="color:#c1996b;">BAVERAGES</h1>
-<ul style="color:moccasin">
+    <hr />
+    <a href="../index.html"><img src="../images/homeicon.png" width="50" height="55" class="homeicon" /> </a>
+    <h1>BEVERAGES</h1>
+<ul>
     <li><img  src="../images/mineralwaterlarge.webp" width="80" height="80" /> 
-        <br /><b style="color:#c1996b;">MINERAL WATER (LARGE)</b>
+        <br /><b>MINERAL WATER (LARGE)</b>
         <br /><i>Aquafina 1500ml mineral water bottle</i>
-        <br /><b style="color:#c1996b;">Rs.160</b></li>
+        <br /><b>Rs.160</b></li>
     <li><img src="../images/mineralwatersmall.webp" width="80" height="60" />
-        <br /> <b style="color:#c1996b;">MINERAL WATER (SMALL)</b>
+        <br /> <b>MINERAL WATER (SMALL)</b>
         <br /><i>Aquafina 500ml mineral water bottle</i>
-        <br /><b style="color:#c1996b;">Rs.80</b></li>
+        <br /><b>Rs.80</b></li>
     <li><img src="../images/can.webp" width="80" height="80" />
-        <br /> <b style="color:#c1996b;">CAN DRINK</b>
+        <br /> <b>CAN DRINK</b>
         <br /><i>250ml can</i>
-        <br /><b style="color:#c1996b;">Rs.130</b></li>
+        <br /><b>Rs.130</b></li>
     <li><img src="../images/ltrdrink.webp" height="80" width="80" />
-        <br /> <b style="color:#c1996b;">1.5 LTR DRINK</b>
+        <br /> <b>1.5 LTR DRINK</b>
         <br /><i>1500ml Bottle</i>
-        <br /><b style="color:#c1996b;">Rs.200</b></li>
+        <br /><b>Rs.200</b></li>
     <li><img src="../images/milktea.webp" width="80" height="80" />
-        <br /> <b style="color:#c1996b;">MILK TEA</b>
+        <br /> <b>MILK TEA</b>
         <br /><i>Milk tea,together with sugar</i>
-        <br /><b style="color:#c1996b;">Rs.80</b></li>
+        <br /><b>Rs.80</b></li>
     <li><img src="../images/Greentea.webp" width="80" height="80" />
-        <br /> <b style="color:#c1996b;">GREEN TEA</b>
+        <br /> <b>GREEN TEA</b>
         <br /><i>Green tea without sugar</i>
-        <br /><b style="color:#c1996b;">Rs.90</b></li>
+        <br /><b>Rs.90</b></li>
     <li><img src="../images/coffee.webp" height="80" width="80" />
-        <br /> <b style="color:#c1996b;">COFFEE</b>
+        <br /> <b>COFFEE</b>
         <br /><i>Milk coffee, together with sugar</i>
-        <br /><b style="color:#c1996b;">Rs.120</b></li>
+        <br /><b>Rs.120</b></li>
 </ul>
-<h3 style="color:#c1996b;">OTHER ITEMS:</h3>
-        <a href="../ONLINE DEALS/onlinedeals.html" style="color:moccasin">GET UPTO 25%OFF ON EXCLUSIVE DEALS</a><BR />
-        <a href="../STARTER/starter.html" style="color:moccasin"> STARTER</a>
-        <a href="../BURGERS/burgers.html" style="color:moccasin"> BURGERS</a>
-        <a href="../HANDI/handi.html" style="color:moccasin">HANDI</a>
-        <a href="../KARAHI/karahi.html" style="color:moccasin">KARAHI</a>
+<h3>OTHER ITEMS:</h3>
+        <a href="../ONLINE DEALS/onlinedeals.html">GET UPTO 25%OFF ON EXCLUSIVE DEALS</a><BR />
+        <a href="../STARTER/starter.html"> STARTER</a>
+        <a href="../BURGERS/burgers.html"> BURGERS</a>
+        <a href="../HANDI/handi.html">HANDI</a>
+        <a href="../KARAHI/karahi.html">KARAHI</a>
         <hr />  
-    <CENTER><h3 style="color:#c1996b;">CONTACT US</h3>
+    <CENTER><h3>CONTACT US</h3>
         <a href="https://www.facebook.com/aqib984" target="_blank"><img src="../images/facebookicon.png" width="30" height="30" /> </a>
         <a href="https://www.instagram.com/aqi984/" target="_blank"><img src="../images/instaicon.png" width="30" height="30" </a>
-        <br /><a href=""><img src="../images/gotopicon2.png" alt="Top" width="50" height="50" style="background-color: #c1996b;" /> </a></center> 
+        <br /><a href=""><img src="../images/gotopicon2.png" alt="Top" width="50" height="50" class="top" /> </a></center> 
 
 
     
