--- a/RESTURANT/ONLINE DEALS/onlinedeals.html
+++ b/RESTURANT/ONLINE DEALS/onlinedeals.html
@@ -5,47 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EXCLUSIVE DEALS</title>
+    <link rel="stylesheet" href="../restaurant.css">
 </head>
-<body style="background-color: #1c1c1c;">
+<body>
     <a href="onlinedeals.html"><img src="../images/dealhead.webp" width="1330" height="200" /> </a>
-    <hr style="border-block-color: #c1996b;" />
-    <a href="../index.html"><img src="../images/homeicon.png" width="50" height="55" style="background-color: #c1996b;" /></a>
-    <h1 style="color:#c1996b;">DEALS</h1> <h3 style="color:moccasin;">EXCLUSIVE DEALS UPTO 25% OFF</h3>    
+    <hr />
+    <a href="../index.html"><img src="../images/homeicon.png" width="50" height="55" class="homeicon" /></a>
+    <h1>DEALS</h1> <h3 class="EXCLUSIVE">EXCLUSIVE DEALS UPTO 25% OFF</h3>    
 <ol>
-    <li style="color:moccasin;"><img src="../images/DEALONE.webp" height="120" width="120" />
-      <br /> <strong style="color:#c1996b;" >DEAL ONE (9%OFF)</strong><ul><li>
+    <li><img src="../images/DEALONE.webp" height="120" width="120" />
+      <br /> <strong>DEAL ONE (9%OFF)</strong><ul><li>
       <b>CHICKEN CHATNI ROLL & CHICKEN MAYO GARLIC ROLL</b>
       <br />Serves 1 OR 2 --- <i>CHICKEN CHATNI ROLL 
       <br />& CHICKEN MAYO GARLIC ROLL</i> <br />
-      <s>Rs.540</s> <strong style="color:#c1996b;">Rs.490</strong></li></ul>
-    <li style="color:moccasin;"><img src="../images/dealtwo.webp" height="120" width="120" />
-      <br /><strong style="color:#c1996b;">DEAL TWO (10%OFF)</strong><ul><li><b>CHICKEN CHATNI ROLL & CHICKEN TIKKA</b>
+      <s>Rs.540</s> <strong>Rs.490</strong></li></ul>
+    <li><img src="../images/dealtwo.webp" height="120" width="120" />
+      <br /><strong>DEAL TWO (10%OFF)</strong><ul><li><b>CHICKEN CHATNI ROLL & CHICKEN TIKKA</b>
       <br />Serves 1 OR 2 --- <i>CHICKEN CHATNI ROLL 
       <br />& CHICKEN TIKKA</i> <br />
-      <s>Rs.820</s> <strong style="color:#c1996b;">Rs.740</strong></li></ul>
-    <li style="color:moccasin;"><img src="../images/dealthree.webp" height="120" width="120" />
-        <br /><strong style="color:#c1996b;">DEAL THREE (18%OFF)</strong><ul><li><b>CHICKEN HANDI & CHICKEN TIKKA</b>
+      <s>Rs.820</s> <strong>Rs.740</strong></li></ul>
+    <li><img src="../images/dealthree.webp" height="120" width="120" />
+        <br /><strong>DEAL THREE (18%OFF)</strong><ul><li><b>CHICKEN HANDI & CHICKEN TIKKA</b>
         <br />Serves 3 OR 4 --- <i>CHICKEN HANDI 
         <br />& CHICKEN TIKKA</i> <br />
-        <s>Rs.2250</s> <strong style="color:#c1996b;">Rs.1999</strong></li></ul>  
-    <li style="color:moccasin;"><img src="../images/dealfour.webp" height="120" width="120" /> 
+        <s>Rs.2250</s> <strong>Rs.1999</strong></li></ul>  
+    <li><img src="../images/dealfour.webp" height="120" width="120" /> 
         <img src="../images/chickenbrownkarhi.webp" height="120" width="120" />
-        <br /><strong style="color:#c1996b;">DEAL FOUR (25%OFF)</strong><ul><li><b>MUTTON KARAHI & CHICKEN KARAHI</b>
+        <br /><strong>DEAL FOUR (25%OFF)</strong><ul><li><b>MUTTON KARAHI & CHICKEN KARAHI</b>
         <br />Serves 4 OR 6 --- <i>MUTTON KARAHI 
         <br />& CHICKEN KARAHI</i> <br />            
-        <s>Rs.4500</s> <strong style="color:#c1996b;">Rs.3600</strong>
+        <s>Rs.4500</s> <strong>Rs.3600</strong>
         <br /><em>(valid till 31 Dec 2023)</em></li></ul></ol>
-    <h3 style="color:#c1996b;">OTHER ITEMS:</h3>    
-    <a href="../BURGERS/burgers.html" style="color:moccasin;">BURGERS</a>
-    <a href="../HANDI/handi.html" style="color:moccasin;">HANDI</a>
-    <a href="../KARAHI/karahi.html" style="color:moccasin;">KARAHI</a>
-    <a href="../STARTER/starter.html" style="color:moccasin;">STARTER</a>
-    <a href="../Baverages/Baverages.html" style="color:moccasin;">BAVERAGES</a>
+    <h3>OTHER ITEMS:</h3>    
+    <a href="../BURGERS/burgers.html" >BURGERS</a>
+    <a href="../HANDI/handi.html">HANDI</a>
+    <a href="../KARAHI/karahi.html">KARAHI</a>
+    <a href="../STARTER/starter.html">STARTER</a>
+    <a href="../Baverages/Baverages.html">BAVERAGES</a>
     <hr />  
-        <CENTER><h3 style="color:#c1996b;">CONTACT US</h3>
+        <CENTER><h3>CONTACT US</h3>
         <a href="https://www.facebook.com/aqib984" target="_blank"><img src="../images/facebookicon.png" width="30" height="30" /> </a>
         <a href="https://www.instagram.com/aqi984/" target="_blank"><img src="../images/instaicon.png" width="30" height="30" </a>
-        <br /><a href=""><img src="../images/gotopicon2.png" alt="Top" width="50" height="50" style="background-color: #c1996b;" /> </a></center>
+        <br /><a href=""><img src="../images/gotopicon2.png" alt="Top" width="50" height="50" class="top"/> </a></center>
     
     
 
