--- a/index.html
+++ b/index.html
@@ -5,26 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY ASSIGNMENTS</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body style="background-color:moccasin">
+<body>
     <center>
         <h1>MY ASSIGNMENTS</h1>
     </center>
-    <hr style="border-block-color:black;" />
+    <hr />
     <table cellpadding="80">
         <tr>
             <td>
-                <a href="RESTURANT/index.html" style="color: black;"><h1>1: RESTURANT</h1></a>
+                <a href="RESTURANT/index.html">
+                    <h1>1: RESTURANT</h1>
+                </a>
             </td>
-            <td><a href="CHESS/index.html" style="color: black;">
-                <h1>2: CHESS GAME</h1>
-            </a></td>
             <td>
-                <a href="Form/index.html" style="color: black;"><h1>3: EMPLOYMENT FORM</h1></a>
+                <a href="CHESS/index.html">
+                    <h1>2: CHESS GAME</h1>
+                </a></td>
+            <td>
+                <a href="Form/index.html">
+                    <h1>3: EMPLOYMENT FORM</h1>
+                </a>
             </td>
         </tr>
-        </table>
+    </table>
 </body>
 
 </html>
