--- a/RESTURANT/BURGERS/burgers.html
+++ b/RESTURANT/BURGERS/burgers.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BURGERS</title>
+    <link rel="stylesheet" href="../restaurant.css">
  </head>
-<body style="background-color: #1c1c1c;">
+<body>
     <a href="burgers.html"><img src="../images/burgershead.jpeg" alt="BURGERS" width="1330" height="200" /> </a>
-    <hr style="border-block-color: #c1996b;" />
- <a href="../index.html"><img src="../images/homeicon.png" width="50" height="55" style="background-color: #c1996b;" /></a> 
- <h1 style="color:#c1996b;">BURGERS</h1> 
-<p style="color:moccasin;">The burger, a timeless culinary creation, is a harmonious marriage of flavors 
+    <hr/>
+ <a href="../index.html"><img src="../images/homeicon.png" width="50" height="55" class="homeicon" /></a> 
+ <h1>BURGERS</h1> 
+<p>The burger, a timeless culinary creation, is a harmonious marriage of flavors 
     and textures. Nestled between a soft, toasted bun, a juicy patty sizzles with 
     anticipation. Its perfectly seasoned exterior seals in the succulent juices, 
     releasing a mouthwatering aroma that captivates the senses. A medley of crisp lettuce, 
@@ -21,39 +22,39 @@
     With each bite, the burger delivers a symphony of flavors,
     a satisfying experience that satisfies the soul and ignites a craving for more.</p>
 
-<ul style="color:moccasin;">
+<ul>
     <li><img src="../images/classchickenburger.webp" height="120" width="120" />
-        <br /><b style="color:#c1996b;">CLASSIC CHICKEN BURGER</b>
+        <br /><b>CLASSIC CHICKEN BURGER</b>
         <br />Serves 1 ---<i> Grilled chicken petty combined with lettuce,
         <BR /> mayo and cheese. Served with fries & coleslaw.</i>
-        <br /><b style="color:#c1996b;">Rs.575</b></li>
+        <br /><b>Rs.575</b></li>
     <li><img src="../images/classicbeefburger.webp" height="120" width="120" />
-        <br /><b style="color:#c1996b;">CLASSIC BEEF BURGER</b>
+        <br /><b>CLASSIC BEEF BURGER</b>
         <br />Serves 1 --- <i>Grilled beef petty combined with lettuce,
         <BR />mayo and cheese. Served with fries & coleslaw.</i>
-        <br /><b style="color:#c1996b;">Rs.575</b></li>
+        <br /><b>Rs.575</b></li>
     <li><img src="../images/bbqchickenburger.webp" width="120" height="120" />
-        <br /><b style="color:#c1996b;">BBQ CHICKEN BURGER</b>
+        <br /><b>BBQ CHICKEN BURGER</b>
         <br />Serves 1 --- <i>Charcoal grilled cubes of chicken on bed of ice berg topped 
         <BR />with smokey bbq sauce. Served with fries & coleslaw.</i>
-        <br /><b style="color:#c1996b;">Rs.595</b></li>    
+        <br /><b>Rs.595</b></li>    
     <li><img src="../images/americangrilledburger.webp" height="120" width="120" />
-        <br /><b style="color:#c1996b;">AMERICAN GRILLED BURGER</b>
+        <br /><b>AMERICAN GRILLED BURGER</b>
         <br />Serves 1 --- <i>Grilled boneless chicken fillet topped with american sauce,
         <BR /> sauteed onions, sauteed mushrooms and cheese.
         <BR /> Served with fries & coleslaw.</i>
-        <br /><b style="color:#c1996b;">Rs.650</b></li></ul>
-    <h3 style="color:#c1996b;">OTHER ITEMS:</h3>
-        <a href="../ONLINE DEALS/onlinedeals.html" style="color:moccasin">GET UPTO 25%OFF ON EXCLUSIVE DEALS</a><BR />
-        <a href="../STARTER/starter.html" style="color:moccasin"> STARTER</a>
-        <a href="../HANDI/handi.html" style="color:moccasin">HANDI</a>
-        <a href="../KARAHI/karahi.html" style="color:moccasin">KARAHI</a>
-        <a href="../Baverages/Baverages.html" style="color:moccasin">BAVERAGES</a>
+        <br /><b>Rs.650</b></li></ul>
+    <h3>OTHER ITEMS:</h3>
+        <a href="../ONLINE DEALS/onlinedeals.html">GET UPTO 25%OFF ON EXCLUSIVE DEALS</a><BR />
+        <a href="../STARTER/starter.html"> STARTER</a>
+        <a href="../HANDI/handi.html">HANDI</a>
+        <a href="../KARAHI/karahi.html">KARAHI</a>
+        <a href="../Baverages/Baverages.html">BAVERAGES</a>
     <hr />  
-    <CENTER><h3 style="color:#c1996b;">CONTACT US</h3>
+    <CENTER><h3>CONTACT US</h3>
         <a href="https://www.facebook.com/aqib984" target="_blank"><img src="../images/facebookicon.png" width="30" height="30" /> </a>
         <a href="https://www.instagram.com/aqi984/" target="_blank"><img src="../images/instaicon.png" width="30" height="30" </a>
-        <br /><a href=""><img src="../images/gotopicon2.png" alt="Top" width="50" height="50" style="background-color: #c1996b;"/> </a></center>
+        <br /><a href=""><img src="../images/gotopicon2.png" alt="Top" width="50" height="50" class="top"/> </a></center>
                   
     
 </body>
