--- a/RESTURANT/STARTER/starter.html
+++ b/RESTURANT/STARTER/starter.html
@@ -5,52 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>STARTER MENU</title>
+    <link rel="stylesheet" href="../restaurant.css">
 
-<body style="background-color: #1c1c1c;">
+<body>
 </head> <a href="starter.html"><img src="../images/startershead.jpeg" alt="STARTER" width="1330" height="200" /> </a>
-<hr style="border-block-color: #c1996b;"/>
-<a href="../index.html"><img  src="../images/homeicon.png" width="50" height="55" style="background-color: #c1996b;" /></a> 
-<h1 style="color:#c1996b;">STARTER MENU</h1> 
-    <p style="color:moccasin;">Welcome to our restaurant! Start your culinary journey with our tantalizing starter menu.</p>
+<hr/>
+<a href="../index.html"><img  src="../images/homeicon.png" width="50" height="55" class="homeicon" /></a> 
+<h1>STARTER MENU</h1> 
+    <p>Welcome to our restaurant! Start your culinary journey with our tantalizing starter menu.</p>
 <ul>
-    <li><p style="color:moccasin;">
+    <li><p>
         <img src="../images/chickencornsoup.webp" height="120" width="120" />
-        <br /><b style="color:#c1996b;">CHICKEN CORN SOUP (SINGLE)</b>
+        <br /><b>CHICKEN CORN SOUP (SINGLE)</b>
         <br />Serves 1 OR 2---<i>PURE CHICKEN STOCK 
         <br />WITH CHICKEN CHUNKS AND BITS OF CORN</i>
-        <br /><b style="color:#c1996b;">Rs.420</b></li></p>
-    <li><p style="color:moccasin;">
+        <br /><b>Rs.420</b></li></p>
+    <li><p>
     <img src="../images/crunchyfingerfish.webp" height="120" width="120" />
-        <br /><b style="color:#c1996b;">CRUNCHT FINGER FISH</b>
-        <br />Serves 1 OR 2---<i style="color:moccasin;">EXTRA CRISPY BONELESS FISH
+        <br /><b>CRUNCHT FINGER FISH</b>
+        <br />Serves 1 OR 2---<i>EXTRA CRISPY BONELESS FISH
         <BR /> STRIPS COATED AND DEEP FRIED TO PERFECTION 
         <BR />SERVED WITH TARTER SAUCE AND FRIES</i>
-        <br /><b style="color:#c1996b;">Rs.995</b></li></p>
-    <li><p style="color:moccasin;">
+        <br /><b>Rs.995</b></li></p>
+    <li><p>
         <img src="../images/saucywings.webp" height="120" width="120" />
-        <br /><b style="color:#c1996b;">SAUCY WINGS</b>
+        <br /><b>SAUCY WINGS</b>
         <br />Serves 1 OR 2--- <i>6 PCS OF MOUTH WATERING CRISPY,
         <BR /> FLAVORFUL CHICKEN WINGS
         <BR />SERVED WITH SAUCE AND FRIES</i>
-        <br /><b style="color:#c1996b;">Rs.545</b></li></p> 
-    <li><p style="color:moccasin;">
+        <br /><b>Rs.545</b></li></p> 
+    <li><p>
         <img src="../images/pizzafries.webp" width="120" height="120" />
-        <br /><b style="color:#c1996b;">PIZZA FRIES (SMALL)</b>
+        <br /><b>PIZZA FRIES (SMALL)</b>
         <br />Serves 1 --- <i>FRIES LOADED WITH PIZZA STYLE CHICKEN
         <BR /> CHEESE, MUSHROOMS & SPECIAL SAUCE</i>
-        <br /><b style="color:#c1996b;">Rs.595</b></li></p></ul>
-    <h3 style="color:#c1996b;">OTHER ITEMS:</h3>
-        <a href="../ONLINE DEALS/onlinedeals.html" style="color:moccasin">GET UPTO 25%OFF ON EXCLUSIVE DEALS</a><BR />
-        <a href="../BURGERS/burgers.html" style="color:moccasin">BURGERS</a>
-        <a href="../HANDI/handi.html" style="color:moccasin">HANDI</a>
-        <a href="../KARAHI/karahi.html" style="color:moccasin">KARAHI</a>
-        <a href="../Baverages/Baverages.html" style="color:moccasin">BAVERAGES</a>
+        <br /><b>Rs.595</b></li></p></ul>
+    <h3>OTHER ITEMS:</h3>
+        <a href="../ONLINE DEALS/onlinedeals.html">GET UPTO 25%OFF ON EXCLUSIVE DEALS</a><BR />
+        <a href="../BURGERS/burgers.html">BURGERS</a>
+        <a href="../HANDI/handi.html">HANDI</a>
+        <a href="../KARAHI/karahi.html">KARAHI</a>
+        <a href="../Baverages/Baverages.html">BAVERAGES</a>
     
-    <hr style="border-block-color: #c1996b;" />  
-        <CENTER><h3 style="color:#c1996b;">CONTACT US</h3>
+    <hr />  
+        <CENTER><h3>CONTACT US</h3>
         <a href="https://www.facebook.com/aqib984" target="_blank"><img src="../images/facebookicon.png" width="30" height="30" /> </a>
         <a href="https://www.instagram.com/aqi984/" target="_blank"><img src="../images/instaicon.png" width="30" height="30" </a>
-        <br /><a href=""><img src="../images/gotopicon2.png" alt="Top" width="50" height="50" style="background-color: #c1996b;"/> </a></center>  
+        <br /><a href=""><img src="../images/gotopicon2.png" alt="Top" width="50" height="50" class="top"/> </a></center>  
         
 </body>
 </html>
