--- a/RESTURANT/index.html
+++ b/RESTURANT/index.html
@@ -6,16 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>AQIB RESTURANT</title>
+    <link rel="stylesheet" href="restaurant.css">
    </head>
-<body style="background-color: #1b1b1b">
+<body>
     <center>
-        <h1><a href="index.html"><img src="images/CHIEF.gif" alt="Resturant" width="250" height="250" /> </a>
-            <a href="index.html" style="color:#c1996b;"><br />AQIB RESTAURANT</a>
+        <a href="index.html"><img src="images/CHIEF.gif" alt="Resturant" width="250" height="250" /></a>
+            <a href="index.html"><br /><h1>AQIB RESTAURANT</h1></a>
     </center><br />
     <a href="ONLINE DEALS/onlinedeals.html"><img src="images/dealbanner.webp" width="1330" height="500" /> </a>
-    </h1><hr style="border-block-color: #c1996b;" />
-    <h2 style="color:#c1996b;">About us:</h2>
-    <p style="color:moccasin;">Established in August 2015, AQIB RESTAURANT believes in facilitating it’s guests with an experience of fine
+    <hr />
+    <h2>About us:</h2>
+    <p>Established in August 2015, AQIB RESTAURANT believes in facilitating it’s guests with an experience of fine
         dining at
         reasonable prices and extra ordinary services.Our chefs are a connoisseur 0f food, be it a fast-tracked lunch
         ora slow-mover exquisite dinner.
@@ -28,9 +29,9 @@
         <li><a href="ONLINE DEALS/onlinedeals.html">
                 <img src="images/dealiconn-removebg-preview.png" width="100" height="90" /> </a>
             <br /><a href="ONLINE DEALS/onlinedeals.html">
-                <h3 style="color:#c1996b;">DEALS</h3>
+                <h3>DEALS</h3>
             </a>
-            <ol style="color: moccasin;">
+            <ol>
                 <li>DEAL ONE (9%OFF)</li>
                 <li>DEAL TWO (10%OFF)</li>
                 <li>DEAL THREE (18%OFF)</li>
@@ -40,9 +41,9 @@
 
         <li><a href="STARTER/starter.html"><img src="images/starter-removebg-preview (1).png" alt="STARTER" width="100" height="70" /> </a>
             <BR /><a href="STARTER/starter.html">
-                <h3 style="color: #c1996b;">STARTER</h3>
+                <h3>STARTER</h3>
             </a>
-            <ul style="color: moccasin;">
+            <ul>
                 <li>CHICKEN CORN SOUP (SINGLE)</li>
                 <li>CRUNCHT FINGER FISH</li>
                 <li>SAUCY WINGS</li>
@@ -53,9 +54,9 @@
         <LI><a href="BURGERS/burgers.html"> <img src="images/bur.png" alt="BURGERS" width="90" height="90" />
             </a>
             <br /><a href="BURGERS/burgers.html">
-                <h3 style="color: #c1996b;">BURGERS</h3>
+                <h3>BURGERS</h3>
             </a>
-            <ul style="color: moccasin;">
+            <ul>
                 <li>CLASSIC CHICKEN BURGER</li>
                 <li>CLASSIC BEEF BURGER</li>
                 <li>BBQ CHICKEN BURGER</li>
@@ -65,9 +66,9 @@
 
         <LI><a href="KARAHI/karahi.html"> <img src="images/karahi.jpeg" alt="KARAHI" width="90" height="100" /> </a>
             <BR /><a href="KARAHI/karahi.html">
-                <h3 style="color: #c1996b;">KARAHI</h3>
+                <h3>KARAHI</h3>
             </a>
-            <ul style="color: moccasin;">
+            <ul>
                 <li>CHICKEN KARAHI</li>
                 <li>CHICKEN BROWN KARAHI</li>
                 <li>MUTTON PESHAWARI KARAHI</li>
@@ -77,9 +78,9 @@
 
         <LI><a href="HANDI/handi.html"> <img src="images/handiiconn.jpg" alt="HANDI" width="75" height="90" /> </a>
             <br /><a href="HANDI/handi.html">
-                <h3 style="color: #c1996b;">HANDI</h3>
+                <h3>HANDI</h3>
             </a>
-            <ul style="color: moccasin;">
+            <ul>
                 <li>CHICKEN HANDI</li>
                 <li>CHICKEN RESHMI HANDI</li>
                 <li>CHICKEN MAKHNI HANDI</li>
@@ -90,9 +91,9 @@
         <LI><a href="Baverages/Baverages.html"> <img src="images/baverage icon.webp" alt="Baverages" width="80"
                     height="80" /> </a>
             <BR /><a href="Baverages/Baverages.html">
-                <h3 style="color: #c1996b;">BAVERAGES</h3>
+                <h3>BEVERAGES</h3>
             </a>
-            <ul style="color: moccasin;">
+            <ul>
                 <li>MINERAL WATER (LARGE)</li>
                 <li>MINERAL WARER (SMALL)</li>
                 <li>CAN DRINK</li>
@@ -103,14 +104,14 @@
             </ul>
         </LI>
     </ul>
-    <hr style="border-block-color: #c1996b;" />
+    <hr />
     <center>
-        <h2 style="color: #c1996b;">CONTACT US:</h2>
+        <h2>CONTACT US:</h2>
         <a href="https://www.facebook.com/aqib984" target="_blank"><img src="images/facebookicon.png" width="30"
             height="30" /> </a>
         <a href="https://www.instagram.com/aqi984/" target="_blank"><img src="images/instaicon.png" width="30"
                 height="30" /> </a>
-        <br /><a href=""><img src="images/gotopicon2.png" alt="Top" width="50" height="50" style="background-color: #c1996b;" /> </a>
+        <br /><a href=""><img src="images/gotopicon2.png" alt="Top" width="50" height="50" class="top" /> </a>
     </center>
 </body>
 </html>
