add images with same background

--- a/RESTURANT/index.html
+++ b/RESTURANT/index.html
@@ -51,7 +51,7 @@
             </ul>
         </li>
 
-        <LI><a href="BURGERS/burgers.html"> <img src="images/bur.png" alt="BURGERS" width="90" height="90" />
+        <LI><a href="BURGERS/burgers.html"> <img src="images/bur-removebg-preview (1).png" alt="BURGERS" width="90" height="90" />
             </a>
             <br /><a href="BURGERS/burgers.html">
                 <h3>BURGERS</h3>
@@ -64,7 +64,7 @@
             </ul>
         </LI>
 
-        <LI><a href="KARAHI/karahi.html"> <img src="images/karahi.jpeg" alt="KARAHI" width="90" height="100" /> </a>
+        <LI><a href="KARAHI/karahi.html"> <img src="images/karahiicon.png" alt="KARAHI" width="90" height="100" /> </a>
             <BR /><a href="KARAHI/karahi.html">
                 <h3>KARAHI</h3>
             </a>
@@ -76,7 +76,7 @@
             </ul>
         </LI>
 
-        <LI><a href="HANDI/handi.html"> <img src="images/handiiconn.jpg" alt="HANDI" width="75" height="90" /> </a>
+        <LI><a href="HANDI/handi.html"> <img src="images/handiiconn-removebg-preview.png" alt="HANDI" width="75" height="90" /> </a>
             <br /><a href="HANDI/handi.html">
                 <h3>HANDI</h3>
             </a>
@@ -88,7 +88,7 @@
             </ul>
         </LI>
 
-        <LI><a href="Baverages/Baverages.html"> <img src="images/baverage icon.webp" alt="Baverages" width="80"
+        <LI><a href="Baverages/Baverages.html"> <img src="images/baverage_icon-removebg-preview.png" alt="Baverages" width="80"
                     height="80" /> </a>
             <BR /><a href="Baverages/Baverages.html">
                 <h3>BEVERAGES</h3>
